--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -79,12 +79,9 @@ jobs:
         if: always()
         id: diff_result
         run: |
-          OUTPUT=$(git diff origin/${{ github.base_ref }} ${{ inputs.websiteDirectory }}${{ inputs.lockFilePath }})
-          OUTPUT="${OUTPUT//'%'/'%25'}"
-          OUTPUT="${OUTPUT//$'\n'/'%0A'}"
-          OUTPUT="${OUTPUT//$'\r'/'%0D'}"
-          echo "result=$OUTPUT" >> $GITHUB_OUTPUT
-          echo $OUTPUT
+          echo "result<<EOF" >> $GITHUB_OUTPUT
+          echo "$(git diff origin/${{ github.base_ref }} ${{ inputs.websiteDirectory }}${{ inputs.lockFilePath }})" >> $GITHUB_OUTPUT
+          echo EOF >> $GITHUB_OUTPUT
 
       - name: Publish a message
         if: always() && contains(steps.diff_result.outputs.result, 'diff')
