--- a/website-cf/action.yml
+++ b/website-cf/action.yml
@@ -38,7 +38,7 @@ inputs:
   commentTitle:
     description: Title to use for the PR comment
     required: false
-    default: '🚀 Website Preview'
+    default: '💻 Website Preview'
   mainBranch:
     description: The main branch name that is set in CF Pages
     required: false
@@ -83,5 +83,5 @@ runs:
           <!--- ${{ inputs.commentId }} ---> 
           ### ${{ inputs.commentTitle }}
 
-          The latest changes to the website are available as preview in: [${{ steps.deploy.outputs.url }}](${{ steps.deploy.outputs.url }})
+          The latest changes are available as preview in: [${{ steps.deploy.outputs.url }}](${{ steps.deploy.outputs.url }})
         edit-mode: replace
