--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -63,8 +63,8 @@ jobs:
         id: changesets
         uses: dotansimha/changesets-action@v1.3.3
         with:
-          publish: 'yarn ${{ inputs.releaseScript }}'
-          version: 'yarn changeset version'
+          publish: '${{inputs.packageManager}} ${{ inputs.releaseScript }}'
+          version: '${{inputs.packageManager}} changeset version'
           commit: 'chore(release): update monorepo packages versions'
           title: ${{inputs.releasePrName}}
           createGithubReleases: ${{ inputs.createGithubReleases }}
