--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -23,6 +23,9 @@ on:
       githubReleaseName:
         required: false
         type: string
+      githubReleaseAssets:
+        required: false
+        type: string
       releasePrName:
         required: false
         type: string
@@ -61,13 +64,14 @@ jobs:
 
       - name: release / pull_request
         id: changesets
-        uses: dotansimha/changesets-action@v1.3.3
+        uses: enisdenjo/changesets-action@8ca73018e8a7f429c8b3c6220f897e1bef07cab2
         with:
           publish: '${{inputs.packageManager}} ${{ inputs.releaseScript }}'
           version: '${{inputs.packageManager}} changeset version'
           commit: 'chore(release): update monorepo packages versions'
           title: ${{inputs.releasePrName}}
           createGithubReleases: ${{ inputs.createGithubReleases }}
+          githubReleaseAssets: ${{ inputs.githubReleaseAssets }}
           githubReleaseName: ${{ inputs.githubReleaseName || steps.vars.outputs.date }}
         env:
           NPM_TOKEN: ${{ secrets.npmToken }}
