--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -23,6 +23,9 @@ on:
       githubReleaseName:
         required: false
         type: string
+      githubReleaseAssets:
+        required: false
+        type: string
       releasePrName:
         required: false
         type: string
@@ -69,6 +72,7 @@ jobs:
           title: ${{inputs.releasePrName}}
           createGithubReleases: ${{ inputs.createGithubReleases }}
           githubReleaseName: ${{ inputs.githubReleaseName || steps.vars.outputs.date }}
+          githubReleaseAssets: ${{ inputs.githubReleaseAssets }}
         env:
           NPM_TOKEN: ${{ secrets.npmToken }}
           GITHUB_TOKEN: ${{ secrets.githubToken }}
