--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "postUpdateOptions": ["yarnDedupeFewer"],
+  "postUpdateOptions": ["yarnDedupeFewer", "pnpmDedupe"],
+  "lockFileMaintenance": {
+    "enabled": true,
+  },
   "automerge": false,
   "recreateClosed": false,
   "prConcurrentLimit": 25,
