--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "postUpdateOptions": ["yarnDedupeFewer", "pnpmDedupe"],
-  "lockFileMaintenance": {
-    "enabled": true
-  },
+  "postUpdateOptions": ["yarnDedupeFewer"],
   "automerge": false,
   "recreateClosed": false,
   "prConcurrentLimit": 25,
