--- a/renovate.json
+++ b/renovate.json
@@ -28,8 +28,12 @@
     },
     {
       "groupName": "graphql-tools",
-      "matchPackagePrefixes": ["@graphql-tools"],
-      "prPriority": 20,
+      "matchPackagePrefixes": ["graphql-tools"],
+      "prPriority": 30,
+      "ignoreUnstable": false,
+      "respectLatest": false,
+      "automerge": false,
+      "allowedVersions": "/^([0-9]+).([0-9]+)(?:.([0-9]+))?(-rc-.+)?$/",
       "reviewers": ["ardatan"]
     },
     {
@@ -77,7 +81,11 @@
     {
       "groupName": "whatwg-node",
       "matchPackagePrefixes": ["@whatwg-node"],
-      "prPriority": 20,
+      "prPriority": 30,
+      "ignoreUnstable": false,
+      "respectLatest": false,
+      "automerge": false,
+      "allowedVersions": "/^([0-9]+).([0-9]+)(?:.([0-9]+))?(-rc-.+)?$/",
       "reviewers": ["ardatan"]
     },
     {
