--- a/setup/action.yml
+++ b/setup/action.yml
@@ -21,6 +21,7 @@ runs:
   steps:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.11.0
+      continue-on-error: true
       with:
         access_token: ${{ github.token }}
 
