--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -18,12 +18,12 @@
     "prettier-config"
   ],
   "peerDependencies": {
-    "prettier": "^2"
+    "prettier": "^3"
   },
   "dependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.0.0-alpha.3",
-    "prettier-plugin-pkg": "^0.17.1",
-    "prettier-plugin-sh": "^0.12.8"
+    "@ianvs/prettier-plugin-sort-imports": "4.0.2",
+    "prettier-plugin-pkg": "^0.18.0",
+    "prettier-plugin-sh": "^0.13.0"
   },
   "publishConfig": {
     "access": "public"
