--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -8,6 +8,10 @@ on:
         type: string
         required: false
         default: yarn
+      packageManagerVersion:
+        description: Package manager version
+        required: false
+        default: ''
       nodeVersion:
         required: false
         type: number
@@ -51,6 +55,7 @@ jobs:
         with:
           nodeVersion: ${{inputs.nodeVersion}}
           packageManager: ${{inputs.packageManager}}
+          packageManagerVersion: ${{inputs.packageManagerVersion}}
 
       - name: set version variables
         id: vars
