--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -42,6 +42,10 @@ on:
         description: Package manager
         required: false
         default: yarn
+      packageManagerVersion:
+        description: Package manager version
+        required: false
+        default: ''
       setupEnvWorkingDirectory:
         description: workingDirectory for `setup-env` action
         required: false
@@ -68,6 +72,7 @@ jobs:
         with:
           nodeVersion: ${{inputs.nodeVersion}}
           packageManager: ${{inputs.packageManager}}
+          packageManagerVersion: ${{inputs.packageManagerVersion}}
           workingDirectory: ${{ inputs.setupEnvWorkingDirectory }}
 
       - name: Algolia push (non-pnpm)
