--- a/setup/action.yml
+++ b/setup/action.yml
@@ -37,6 +37,7 @@ runs:
       working-directory: ${{ inputs.workingDirectory }}
       run: |
         PNPM_VERSION=$(cat package.json | jq -r '.packageManager' | awk -F@ '{print $2}')
+        PNPM_VERSION=${{ inputs.packageManagerVersion }}
         PNPM_VERSION=${PNPM_VERSION:-7.30.5}
         echo "Using PNPM version $PNPM_VERSION"
         echo "version=$PNPM_VERSION" >> $GITHUB_OUTPUT
@@ -46,7 +47,7 @@ runs:
       if: inputs.packageManager == 'pnpm'
       uses: pnpm/action-setup@v2.4.0
       with:
-        version: ${{ inputs.packageManagerVersion  || steps.pnpm.outputs.version }}
+        version: ${{ steps.pnpm.outputs.version }}
         run_install: false
 
     - name: setup node
