--- a/setup/action.yml
+++ b/setup/action.yml
@@ -36,9 +36,14 @@ runs:
       if: inputs.packageManager == 'pnpm'
       working-directory: ${{ inputs.workingDirectory }}
       run: |
-        PNPM_VERSION=$(cat package.json | jq -r '.packageManager' | awk -F@ '{print $2}')
-        PNPM_VERSION=${{ inputs.packageManagerVersion }}
         PNPM_VERSION=${PNPM_VERSION:-7.30.5}
+        PKG_JSON==$(cat package.json | jq -r '.packageManager' | awk -F@ '{print $2}')
+        if [ ! -z $PKG_JSON ]; then
+          PNPM_VERSION=$PKG_JSON
+        fi
+        if [ ! -z {{inputs.packageManager}} ]; then
+          PNPM_VERSION=${{ inputs.packageManagerVersion }}
+        fi
         echo "Using PNPM version $PNPM_VERSION"
         echo "version=$PNPM_VERSION" >> $GITHUB_OUTPUT
 
