Fix missing `type` in release-snapshot.yml

--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -10,6 +10,7 @@ on:
         default: yarn
       packageManagerVersion:
         description: Package manager version
+        type: string
         required: false
         default: ''
       nodeVersion:
