--- a/.github/workflows/changesets-dependencies.yaml
+++ b/.github/workflows/changesets-dependencies.yaml
@@ -15,6 +15,7 @@ on:
         required: false
         default: yarn
       packageManagerVersion:
+        type: string
         description: Package manager version
         required: false
         default: ''
