--- a/.github/workflows/ci-node-matrix.yml
+++ b/.github/workflows/ci-node-matrix.yml
@@ -16,6 +16,7 @@ on:
         required: false
         default: yarn
       packageManagerVersion:
+        type: string
         description: Package manager version
         required: false
         default: ''
