Add missing \`type\`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ on:
         required: false
         default: yarn
       packageManagerVersion:
+        type: string
         description: Package manager version
         required: false
         default: ''
