--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -9,6 +9,7 @@ on:
         required: false
         default: yarn
       packageManagerVersion:
+        type: string
         description: Package manager version
         required: false
         default: ''
