fix algolia-integrity action

--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -11,8 +11,7 @@ on:
         type: string
         required: true
         description:
-          "The root domain and path that will prefix all URLs (ex:
-          'https://www.the-guild.dev/graphql/codegen/')"
+          "The root domain and path that will prefix all URLs (ex: 'https://www.the-guild.dev/graphql/codegen/')"
       source:
         type: string
         required: true
@@ -43,6 +42,7 @@ on:
       packageManagerVersion:
         description: Package manager version
         required: false
+        type: string
         default: ''
       setupEnvWorkingDirectory:
         description: workingDirectory for `setup-env` action
