--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "name": "The Guild",
     "url": "https://the-guild.dev"
   },
+  "packageManager": "pnpm@8.12.1",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8.9.2"
+  },
   "license": "MIT",
   "private": true,
   "scripts": {
