--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -20,25 +20,26 @@
     "eslint-config"
   ],
   "peerDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": "^8",
+    "typescript": "^5"
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsonc": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "@rushstack/eslint-patch": "^1.6.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsonc": "^2.11.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-mdx": "^3.0.0",
-    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-unicorn": "^49.0.0",
-    "eslint-plugin-yml": "^1.8.0"
+    "eslint-plugin-yml": "^1.11.0"
   },
   "publishConfig": {
     "access": "public"
