--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "echo No build command, skipping…",
     "cspell": "cspell --gitignore **/*",
-    "lint": "eslint --cache --ignore-path .gitignore .",
+    "lint": "eslint --cache .",
     "lint:prettier": "prettier --ignore-path .gitignore --ignore-path .prettierignore --check .",
     "lint:remote": "eslint-remote-tester",
     "prettier": "pnpm lint:prettier --write",
