--- a/renovate.json
+++ b/renovate.json
@@ -98,10 +98,7 @@
     },
     {
       "groupName": "prettier",
-      "matchPackageNames": [
-        "prettier",
-        "@theguild/prettier-config"
-      ],
+      "matchPackageNames": ["prettier", "@theguild/prettier-config"],
       "prPriority": 20,
       "reviewers": ["B2o5T"]
     },
