Update `the-guild-org/shared-config/setup` to be compatible with yarn v4

--- a/setup/action.yml
+++ b/setup/action.yml
@@ -71,6 +71,12 @@ runs:
       if: inputs.packageManager == 'yarn'
       run: yarn install --ignore-engines --frozen-lockfile --immutable
       working-directory: ${{ inputs.workingDirectory }}
+      
+    - name: modern yarn install
+      shell: bash
+      if: inputs.packageManager == 'yarn-modern'
+      run: corepack enable && yarn install
+      working-directory: ${{ inputs.workingDirectory }}
 
     - name: pnpm install
       shell: bash
