--- a/setup/action.yml
+++ b/setup/action.yml
@@ -68,13 +68,13 @@ runs:
 
     - name: yarn install
       shell: bash
-      if: inputs.packageManager == 'yarn' && inputs.packageManagerVersion === ''
+      if: inputs.packageManager == 'yarn' && inputs.packageManagerVersion == ''
       run: yarn install --ignore-engines --frozen-lockfile --immutable
       working-directory: ${{ inputs.workingDirectory }}
       
     - name: modern yarn install
       shell: bash
-      if: inputs.packageManager == 'yarn' && inputs.packageManagerVersion === 'modern'
+      if: inputs.packageManager == 'yarn' && inputs.packageManagerVersion == 'modern'
       run: corepack enable && yarn
       working-directory: ${{ inputs.workingDirectory }}
 
