--- a/.github/workflows/changesets-dependencies.yaml
+++ b/.github/workflows/changesets-dependencies.yaml
@@ -21,8 +21,8 @@ on:
         default: ''
       nodeVersion:
         required: false
-        type: number
-        default: 18
+        type: string
+        default: '18'
     secrets:
       githubToken:
         required: true
