--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@theguild/tailwind-config",
   "version": "0.3.2",
+  "type": "module",
   "description": "The Guild's shared Tailwind config",
   "repository": {
     "url": "the-guild-org/shared-config",
@@ -10,8 +11,8 @@
   "license": "MIT",
   "private": false,
   "exports": {
-    ".": "./index.cjs",
-    "./postcss.config": "./postcss.config.cjs",
+    ".": "./index.js",
+    "./postcss.config": "./postcss.config.js",
     "./package.json": "./package.json"
   },
   "keywords": [
@@ -19,11 +20,11 @@
     "tailwind-config"
   ],
   "dependencies": {
-    "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.2",
-    "postcss": "^8.4.32",
-    "postcss-import": "^16.0.0",
-    "tailwindcss": "^3.3.6"
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^6.1.2",
+    "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.3"
   },
   "publishConfig": {
     "access": "public"
