--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -11,20 +11,34 @@
   "license": "MIT",
   "private": false,
   "exports": {
-    ".": "./index.js",
-    "./postcss.config": "./postcss.config.js",
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./postcss.config": {
+      "import": "./dist/postcss.config.js",
+      "types": "./dist/postcss.config.d.ts"
+    },
     "./package.json": "./package.json"
   },
   "keywords": [
     "tailwind",
     "tailwind-config"
   ],
+  "scripts": {
+    "build": "tsup src --clean --format esm --dts",
+    "prepublishOnly": "pnpm build"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "cssnano": "^6.1.2",
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "postcss-load-config": "5.0.3",
+    "tsup": "^8.0.2"
   },
   "publishConfig": {
     "access": "public"
