--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -21,6 +21,11 @@
     },
     "./package.json": "./package.json"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "keywords": [
     "tailwind",
     "tailwind-config"
