export `tailwind.config` as esm, `postcss.config` as cjs, update deps (#399)
* update deps

* chore(dependencies): updated changesets for modified dependencies

* aa

* chore(deps): update pnpm to v8.15.6 (#393)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* chore(deps): update dependency @types/node to v20.12.5 (#390)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update dependency eslint-plugin-unicorn to v52 (#395)

* fix(deps): update dependency eslint-plugin-unicorn to v52

* chore(dependencies): updated changesets for modified dependencies

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

* chore(deps): update dependency @types/eslint to v8.56.7 (#392)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update typescript-eslint monorepo to v7.5.0 (#386)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update dependency eslint-plugin-yml to v1.14.0 (#394)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update dependency eslint-plugin-jsonc to v2.15.0 (#391)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* chore(deps): update dependency typescript to v5.4.4 (#396)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update dependency eslint-plugin-sonarjs to ^0.25.0 (#389)

* fix(deps): update dependency eslint-plugin-sonarjs to ^0.25.0

* chore(dependencies): updated changesets for modified dependencies

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

* fix lint



--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -10,20 +10,41 @@
   "license": "MIT",
   "private": false,
   "exports": {
-    ".": "./index.cjs",
-    "./postcss.config": "./postcss.config.cjs",
+    ".": "./dist/tailwind.config.mjs",
+    "./postcss.config": "./dist/postcss.config.js",
     "./package.json": "./package.json"
   },
+  "types": "./dist/tailwind.config.d.mts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/postcss.config.d.ts"
+      ]
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "keywords": [
     "tailwind",
     "tailwind-config"
   ],
+  "scripts": {
+    "build": "tsup",
+    "prepublishOnly": "pnpm build"
+  },
   "dependencies": {
-    "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.2",
-    "postcss": "^8.4.32",
-    "postcss-import": "^16.0.0",
-    "tailwindcss": "^3.3.6"
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^6.1.2",
+    "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "postcss-load-config": "5.0.3",
+    "tsup": "^8.0.2"
   },
   "publishConfig": {
     "access": "public"
