--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@theguild/eslint-config",
   "version": "0.11.8",
-  "type": "commonjs",
+  "type": "module",
   "description": "The Guild's shared ESLint config",
   "repository": {
     "url": "the-guild-org/shared-config",
@@ -20,11 +20,10 @@
     "eslint-config"
   ],
   "peerDependencies": {
-    "eslint": "^8",
+    "eslint": "^9",
     "typescript": "^5"
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "^1.6.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint-config-prettier": "^9.1.0",
