--- a/setup/action.yml
+++ b/setup/action.yml
@@ -81,5 +81,5 @@ runs:
     - name: pnpm install
       shell: bash
       if: inputs.packageManager == 'pnpm'
-      run: pnpm install --no-frozen-lockfile
+      run: pnpm install --frozen-lockfile
       working-directory: ${{ inputs.workingDirectory }}
