--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -39,8 +39,12 @@ on:
       npmToken:
         required: true
     outputs:
-      published: ${{ jobs.snapshot.outputs.published }}
-      publishedPackages: ${{ jobs.snapshot.outputs.publishedPackages }}
+      published:
+        description: "???"
+        value: ${{ jobs.snapshot.outputs.published }}
+      publishedPackages:
+        description: "???"
+        value: ${{ jobs.snapshot.outputs.publishedPackages }}
 
 jobs:
   snapshot:
